[project]
name = "peals_zhoukr062"
version = "1.2"
authors = [
  { name="Keren Zhou", email="zhoukr062@gmail.com" },
]
description = "Peak-based Enhancement Analysis pipeLine for MeRIP-seq"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires=['pip', 'setuptools>=45.2.0', 'numpy>=1.21.2', 'pandas>=1.1.4', 'pysam>=0.16.0.1', 'psutil>=5.9.4', 'pyBigWig>=0.3.18', 'tqdm>=tqdm', 'rpy2>=3.4.5', 'mpmath>=1.1.0', 'findpeaks>=2.1.7', 'csaps>=1.1.0', 'pytest>=5.4.1']

[project.urls]
"Homepage" = "https://github.com/kerenzhou062/PEALS"
"Bug Tracker" = "https://github.com/kerenzhou062/PEALS/issues"
